<resources>
    <string name="app_name">Euphoria</string>
    <string name="textview">Euphoria</string>
    <string name="enter_college_name">Enter College Name</string>
    <string name="analyze">Analyze</string>
    <string name="no_name">No Name</string>
    <string name="happiness_index">Happiness Index: </string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">IqpmCD92XnStYIq8QwanOf8HT</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">0s8nWFgg35eco2s2DvkuXiO0GlanOU56hFflTV92nebk5g3GF8</string>
    <string name="subscription_key">90fa1d8c5db046429b4db9b51ba39f56</string>
    <string name="calculating">Calculating...</string>
    <string name="positive_tweets">Positive Tweets</string>
    <string name="negative_tweets">Negative Tweets</string>
    <string name="problem">Microsoft, we have a problem.</string>
    <string name="loading">loading...</string>
    <string name="percent2">%d%%</string>

</resources>
