<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/resultsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/no_name"
            android:gravity="center"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/happinessLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/happiness_index"
            android:gravity="center"/>

        <TextView
            android:id="@+id/happinessIndex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculating"
            android:gravity="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>