<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.euphoria.gracelu.euphoria.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="64sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="105dp"
            android:textIsSelectable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"/>

        <EditText
            android:id="@+id/userCollege"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_college_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="203dp"
            android:paddingBottom="30dp"/>

        <Button
            android:id="@+id/enterButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:text="@string/analyze"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
